# santander-bootcamp-ciencia-de-dados

./: .gitignore  pyproject.toml
config/: config.py  plotting_parameters.yaml
desafios-de-projeto/: pipeline.py
