[tool.poetry]
name = "santander-bootcamp-ciencia-de-dados"
version = "0.1.0"
description = ""
authors = ["eduardohealli <eng.eduardohealli@gmail.com>"]
packages = [{include = "config"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
